# simple-http-server

./: .gitignore  CMakeLists.txt  final.in  httpparser.cpp  httpparser.h  webserver.cpp  worker.cpp  worker.h
cmake/: FindLibev.cmake  FindMagic.cmake
http-parser/: URL
